3: Styles and style purges

--- a/client/src/styles/_imports/elements/content-sectioning.css
+++ b/client/src/styles/_imports/elements/content-sectioning.css
@@ -11,3 +11,7 @@ Styleguide Elements.ContentSectioning
 */
 
 @import "../../_imports/elements/content-sectioning.headings.css";
+
+header * {
+  margin: 0;
+}
