--- a/client/src/styles/_imports/elements/content-sectioning.headings.twig
+++ b/client/src/styles/_imports/elements/content-sectioning.headings.twig
@@ -1,4 +1,8 @@
 <main class="c-sample" id="d-elements--content-sectioning--headings">
+    <header>
+        <h1>Octopus Taxonomy</h1>
+        <p>Many tentacles. Many layers.</p>
+    </header>
     <section>
         <h1>Animalia</h1>
         <h2>Mollusca</h2>
