--- a/client/src/styles/_imports/elements/text-content.lists.css
+++ b/client/src/styles/_imports/elements/text-content.lists.css
@@ -4,20 +4,7 @@ Lists
 Styleguide Elements.TextContent.Lists
 */
 
-:--global-list-element {
-  margin-block: var(--env-space--small);
-  /* IDEA: Use `*l[class=""]` to limit styles to "default" lists */
-  padding-inline-start: var(--global-layout--list-decorator-width);
-}
-:--global-list-element :--global-list-element {
-  margin-block: var(--env-space--x-small);
-}
-
-/* Ensure list item markers are "aligned" at the top */
-/* SEE: `./interactive.details-summary.css` */
-/* RFE: Share this code */
-:--global-list-element > * {
-  /* FAQ: The alignment to be adjusted is that of element(s) in the list item */
-  /* SEE: https://stackoverflow.com/a/6735690/11817077 */
-  vertical-align: text-top;
+/* IDEA: Use `*l[class=""]` to limit styles to "default" lists */
+ul, ol, dl {
+  margin: var(--env-space--small) 0;
 }
