--- a/client/src/styles/_imports/components/c-intro.css
+++ b/client/src/styles/_imports/components/c-intro.css
@@ -10,36 +10,15 @@ Markup: c-intro.twig
 Styleguide Components.Intro
 */
 .c-intro {
-    /* Remove layout spacing */
-    /* FAQ: The intro is meant to be a part of some greater layout. */
-    margin-block: 0;
-}
-
-[class*="c-intro__"] + [class*="c-intro__"] {
-    margin-top: var(--env-space--x-small);
+    /* Remove _vertical_ layout spacing */
+    /* FAQ: The intro is meant to be a part of some greater layout,
+            which may have horizontal spacing requirements */
+    margin-top: 0;
+    margin-bottom: 0;
 }
 .c-intro__major {
     font-size: var(--global-font-size--normal);
 }
 .c-intro__minor {
     font-size: var(--global-font-size--small);
-}
-
-.c-intro__extra {
-    white-space: nowrap;
-}
-.c-intro__extra::before {
-    content: "&";
-    margin-inline-end: 0.5ch;
-}
-small.c-intro__extra::before {
-    /* Add space, after seperator, that is equal to `1ch` of parent */
-    /* FAQ: The `0.8` is from `normalize`'s `font-size: 80%` for `<small>` */
-    /* RFE: Use global variable for the `80%` of `<small>` from `normalize` */
-    margin-inline-end: calc( 0.5ch * 0.8 );
-}
-
-.c-intro__abbr {
-    font-size: var(--global-font-size--small);
-    white-space: nowrap;
 }
