--- a/client/src/styles/site/core.css
+++ b/client/src/styles/site/core.css
@@ -25,7 +25,6 @@
 
 @import "../_imports/elements/content-sectioning.css";
 @import "../_imports/elements/inline-text.css";
-@import "../_imports/elements/interactive.css";
 @import "../_imports/elements/text-content.css";
 @import "../_imports/elements/forms.css";
 
@@ -39,4 +38,9 @@
 
 @import "../_imports/components/c-intro.css";
 @import "../_imports/components/c-loading.css";
-@import "../_imports/components/c-error.css";
+@import "../_imports/components/c-notice.css";
+
+/*! SCHOOLOGY | Site Core: Trumps */
+
+@import "../_imports/trumps/s-form.css";
+@import "../_imports/trumps/u-font.css";
