--- a/client/src/styles/_imports/components/c-intro.twig
+++ b/client/src/styles/_imports/components/c-intro.twig
@@ -1,11 +1,11 @@
 <main class="c-sample" id="c-intro">
   <h2>Octopus Greatness</h2>
   <section class="c-intro">
-    <p class="c-intro__major">Octopus are the best.</p>
-    <small class="c-intro__minor">Octopus do all the best things for all the best reaons. Believe it.</small>
+    <p class="c-intro__major-text">Octopus are the best.</p>
+    <small class="c-intro__minor-text">Octopus do all the best things for all the best reaons. Believe it.</small>
   </section>
   <h2>Senior Engineer</h2>
   <section class="c-intro">
-    <p class="c-intro__abbr">@ That Company</p>
+    <p class="c-intro__abbr-text">@ That Company</p>
   </section>
 </main>
