--- a/client/src/styles/_imports/settings/env.space.css
+++ b/client/src/styles/_imports/settings/env.space.css
@@ -25,6 +25,7 @@ Styleguide Settings.CustomEnvironmentalVariables.Space
   --env-space--large:       3.0rem;
   --env-space--x-large:     4.8rem;
   --env-space--xx-large:    8.0rem;
+  --env-space--xx-large:    13.0rem;
 }
 
 /* DO NOT ADD STYLES HERE; USE THE VARIABLES FOR STYLES IN OTHER STYLESHEETS */
