--- a/client/src/styles/_imports/settings/env.vw.css
+++ b/client/src/styles/_imports/settings/env.vw.css
@@ -6,19 +6,20 @@ These are the standard viewport widths. Use these to define media queries.
 
 <small>Better formatting is pending [Framework, Typography and Color support](https://github.com/kss-node/kss-node/issues/388).</small>
 
---vw--narrow:         300px
---vw--narrow-medium:  485px
---vw--medium:         670px
---vw--medium-wide:    1085px
---vw--wide:           1500px
+--vw--narrow:         360px
+--vw--medium:         580px
+--vw--wide:           940px
 
 Styleguide Settings.CustomEnvironmentalVariables.ViewportWidth
 */
-  --env-vw--narrow:         300px;
-  --env-vw--narrow-medium:  485px;
-  --env-vw--medium:         670px;
-  --env-vw--medium-wide:    1085px;
-  --env-vw--wide:           1500px;
+  /* FAQ: The ratio between each adjacent style is about `var(--env-phi)` (~1.618) */
+  /* FAQ: Not using `calc` because:
+          - static values are fast (`postcss-preset-env` config could automate this)
+          - there is no `round` in CSS (but we could add one via `postcss-functions`)
+   */
+  --env-vw--narrow:  360px;
+  --env-vw--medium:  580px;
+  --env-vw--wide:    940px;
 }
 
 /* DO NOT ADD STYLES HERE; USE THE VARIABLES FOR STYLES IN OTHER STYLESHEETS */
