--- a/client/src/styles/_imports/generics/roots.skin.css
+++ b/client/src/styles/_imports/generics/roots.skin.css
@@ -12,7 +12,7 @@ Weight: 1.5
 Styleguide Generics.SectioningRoot
 */
 body {
-  margin: var(--env-space--large);
+  margin: 0;
 
   background-color: var(--global-color-bkgd--normal);
   color: var(--global-color-text--normal);
