--- a/client/src/styles/site/core.css
+++ b/client/src/styles/site/core.css
@@ -25,6 +25,7 @@
 
 @import "../_imports/elements/content-sectioning.css";
 @import "../_imports/elements/inline-text.css";
+@import "../_imports/elements/interactive.css";
 @import "../_imports/elements/text-content.css";
 @import "../_imports/elements/forms.css";
 
