3: Support CSS documentation (KSS)

--- a/client/src/styles/_imports/elements/interactive.details-summary.css
+++ b/client/src/styles/_imports/elements/interactive.details-summary.css
@@ -1,7 +1,7 @@
 /*
 <details> & <summary>
 
-Styleguide Example.Elements.InteractiveElements.DetailsSummary
+Styleguide Elements.InteractiveElements.DetailsSummary
 */
 :root {
   --d-elements-interactive--summary-decorator-width: 1ch;
