--- a/client/src/styles/_imports/generics/roots.skin.css
+++ b/client/src/styles/_imports/generics/roots.skin.css
@@ -1,5 +1,5 @@
 /*
-Sectioning Root (i.e. `body`)
+Sectioning Root: `body`
 
 The content of an HTML document. These styles cascade to affect most elements.
 
