--- a/client/src/styles/_imports/settings/env.misc.css
+++ b/client/src/styles/_imports/settings/env.misc.css
@@ -8,7 +8,7 @@ These are miscellaneous standard values, like a recurring ratio.
 
 --phi: 1.618
 
-Styleguide Settings.CustomEnvironmentalVariables.ViewportWidth
+Styleguide Settings.CustomEnvironmentalVariables.Miscellaneous
 */
   --env-phi: 1.618;
 }
