--- a/client/src/styles/_imports/tools/none.css
+++ b/client/src/styles/_imports/tools/none.css
@@ -13,3 +13,11 @@ No global "extends" exist.
 
 Styleguide Tools.Extends.None
 */
+
+/*
+None
+
+No global "mixins" exist.
+
+Styleguide Tools.Mixins.None
+*/
