--- a/client/src/styles/_imports/elements/content-sectioning.headings.css
+++ b/client/src/styles/_imports/elements/content-sectioning.headings.css
@@ -1,7 +1,7 @@
 /*
 Headings
 
-Styleguide Elements.CotnentSectioning.Headings
+Styleguide Elements.ContentSectioning.Headings
 */
 /* TODO: Uncomment as selectors become relevant */
 
