--- a/client/src/styles/_imports/trumps/s-form.css
+++ b/client/src/styles/_imports/trumps/s-form.css
@@ -3,7 +3,7 @@ Form
 
 Styles and visual fixes for elements within a `<form>`.
 
-Styleguide About.Trumps.Scopes.Form
+Styleguide Trumps.Scopes.Form
 */
 
 /* RFE: Nesting would be helpful, here */
